tests/rosetta/transpiler/Python/ftp.out
File "/workspace/mochi/tests/rosetta/transpiler/Python/ftp.py", line 26
    def login(conn, user, pass):
                          ^^^^
SyntaxError: invalid syntax